intel_strong_scalling_presentation/debug_quad_test1.23429.err
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
  File "ico_benchmark_forward_3d.py", line 148
    mesh = fire.ExtrudedMesh(fire.RectangleMesh(90,90, Real_Lz, Real_Lx, quadrilateral = True, comm.comm), 90, Real_Ly )
                                                                                               ^
SyntaxError: positional argument follows keyword argument
